# kanban-lite

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  MANIFEST.in  alembic.ini  pyproject.toml  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 2024042901_create_cards_table.py  2025102601_create_cards_table.py
backend/app/: main.py
backend/app/api/routes/: cards.py  health.py
backend/app/core/: config.py  enums.py  migrate.py
backend/app/crud/: card.py
backend/app/db/: session.py
backend/app/models/: __init__.py  card.py
backend/app/schemas/: card.py
backend/kanban_lite_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: seed.py
backend/tests/: conftest.py  test_cards.py  test_database_config.py
infra/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/templates/: apache-app.conf.tftpl  apache-registry.conf.tftpl  app.env.tftpl  docker-compose.yaml.tftpl  docker-registry.service.tftpl  registry.htpasswd.tftpl
web/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/board/: BoardColumn.tsx  CardForm.tsx  CardItem.tsx
web/src/components/ui/: button.tsx  (+6 more)
web/src/hooks/: useCards.ts  useViewportMode.ts
web/src/lib/: api.ts  utils.ts
web/src/pages/: AboutPage.tsx  BoardPage.tsx
web/src/test/: setup.ts
web/tests/playwright/: board.spec.ts
(+1 files in other folders)
