[metadata]
name = kanban-lite-backend
version = 0.1.0

[options]
packages = find:
include_package_data = True
install_requires =
    fastapi==0.110.2
    uvicorn[standard]==0.29.0
    sqlalchemy==2.0.29
    psycopg[binary]==3.1.18
    psycopg2-binary==2.9.9
    alembic==1.13.1
    pydantic-settings==2.2.1
    python-dotenv==1.0.1

[options.extras_require]
dev =
    pytest==8.2.0
    httpx==0.27.0
    ruff==0.4.2
